data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_770.wast
;; 1. **Loop with Missing `end` Keyword**:    - **Description**: Test a loop instruction that is not properly terminated with an `end` keyword.    - **Constraint Checked**: Ensures the syntax compliance of loop blocks.    - **Relation to CFG**: Incorrectly terminated loops cause the CFG to be malformed, potentially leading to unreachable code or invalid branches.

(assert_invalid
 (module (func $missing-end-loop
  (loop (br 0))
  "unclosed block"
  )
 )
 "unexpected end of section or function")